--- a/whac-a-mole/css/main.css
+++ b/whac-a-mole/css/main.css
@@ -10,8 +10,8 @@
 }
 
 .game-map {
-  width: 75vh;
-  height: 75vh;
+  width: 480px;
+  height: 480px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -20,24 +20,34 @@
 }
 
 .game-mole {
-  display: inline-block;
-  box-sizing: content-box;
-  width: 33%; height: 33%;
-  border-style: dashed;
-  border-color: gray;
-  border-width: 1px;
+  box-sizing: border-box;
+  width: 160px;
+  height: 160px;
+  border: 1px solid grey;
   cursor: pointer;
   background-image: url(./../img/bg.png);
   background-size: cover;
   transition: background-image 0.5s;  -webkit-transition: background-image 0.5s;
 }
 
-/* .game-mole:hover {
-  background-image: url(./../img/mole.png);
-  background-color: #883d0b;
-} */
-
 .mole-coming {
   background-image: url(./../img/mole.png);
   background-color: #883d0b;
+}
+
+.start-action-container {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.title {
+  margin: 10px;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+  cursor: pointer;
 }
